--- a/NuGet.Config
+++ b/NuGet.Config
@@ -5,7 +5,9 @@
     <add key="repositoryPath" value="External\Packages" />
   </config>
   <packageSources>
-    <add key="dotnet" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <clear />
+    <add key="dotnet-core" value="https://www.myget.org/F/dotnet-core/api/v3/index.json"/>
+    <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
   <packageRestore>
     <!-- Allow NuGet to download missing packages -->        
