--- a/c2eLib.csproj
+++ b/c2eLib.csproj
@@ -3,33 +3,29 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
-    
-  </PropertyGroup>  
-    
+  </PropertyGroup>
   <PropertyGroup Label="Package">
-    
     <PackageId>c2eLib</PackageId>
     <PackageVersion>0.0.1</PackageVersion>
     <PackageReleaseNotes>Caos Injector for Windows working</PackageReleaseNotes>
     <PackageTags>c2e Caos Creatures Docking Station </PackageTags>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-
     <Authors>Taranais</Authors>
     <Description>.Net Standard library for c2e engine, Caos Injector for Windows (MemoryMappedFiles) and Unix (Sockets) </Description>
     <Copyright>Copyright © Taranais. All rights reserved.</Copyright>
-    
-    
-    <PackageIconUrl></PackageIconUrl>
-    <PackageProjectUrl></PackageProjectUrl>
-    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageIconUrl>
+    </PackageIconUrl>
+    <PackageProjectUrl>
+    </PackageProjectUrl>
+    <PackageLicenseUrl>
+    </PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
-
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>  
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
     <IncludeSource>True</IncludeSource>
-  </PropertyGroup>  
-
+  </PropertyGroup>
   <ItemGroup Label="Package References">
     <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
+    <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.3.0" />
   </ItemGroup>
 </Project>
