marked build package on build

--- a/c2eLib.csproj
+++ b/c2eLib.csproj
@@ -20,7 +20,7 @@
     <PackageLicenseUrl>
     </PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
     <IncludeSource>True</IncludeSource>
   </PropertyGroup>
